# x-skills

./: .gitignore  .goreleaser.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  IDEA.md  LICENSE.md  README.md  SECURITY.md  SUPPORT.md  builtins.go  go.mod  go.sum  hermes-report.md  install.sh  llms.txt  plan2-task3-report.md  plan3-task7-report.md  plan4-task2-report.md  pyproject.toml  release.config.cjs  skills-lock.json
.agents/skills/: bubbletea  bubbletea-code-review  building-glamorous-tuis  charm-stack  code-quality-expert  control-cli  find-skills  golang-benchmark  golang-cli  golang-code-style  golang-concurrency  golang-context  golang-continuous-integration  golang-data-structures  golang-dependency-injection  golang-dependency-management  golang-design-patterns  golang-documentation  golang-error-handling  golang-google-wire  golang-gopls  golang-how-to  golang-lint  golang-modernize  golang-naming  golang-observability  golang-performance  golang-pkg-go-dev  golang-popular-libraries  golang-project-layout  golang-refactoring  golang-safety  golang-samber-do  golang-samber-hot  golang-samber-lo  golang-samber-mo  golang-samber-oops  golang-samber-ro  golang-samber-slog  golang-security  (+13 more)
.github/workflows/: ci.yml  go.yml  release.yml
.superpowers/sdd/: late-flake-fix-report.md  plan2-task5-report.md  (+13 more)
docs/: backlog.md  cli.md  documentation-structure.md  remote-skills.md  tui-review.md  tui.md
scripts/: install-dev.ps1  install-dev.sh  install.ps1  install.sh
tests/: test_cli.py  test_install_docs.py  test_interactive.py
(+243 files in other folders)
