[project]
name = "x-skills"
version = "0.1.0"
description = "Personal archive and linker for agent skills"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Pavel Obruchnikov", email = "me@inkyquill.net" }]
dependencies = []

[project.urls]
Homepage = "https://github.com/InkyQuill/x-skills"
Repository = "https://github.com/InkyQuill/x-skills.git"
Issues = "https://github.com/InkyQuill/x-skills/issues"

[project.scripts]
x-skills = "x_skills.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
